--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  width: 320px;
+  width: 360px;
   margin-top: 20px;
 }
 
@@ -48,7 +48,7 @@
   padding: 10px;
   cursor: pointer;
   transition: background 0.3s;
-  width: 340px;
+  width: 380px;
 }
 
 .btn-add:hover {
@@ -80,7 +80,7 @@ label {
   padding: 15px 20px;
   margin-top: 20px;
   margin-left: 20px;
-  width: 320px;
+  width: 400px;
   background-color: #1e1e1e; /* dark background for contrast */
   color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -116,7 +116,7 @@ label {
 .list-todo input[type="checkbox"] {
   margin-right: 8px;
   transform: scale(1.1);
-  accent-color: #4CAF50; /* nice green checkbox */
+  accent-color: #227cb9; /* nice green checkbox */
 }
 
 .list-todo input[data-completed="true"] + span {
@@ -136,4 +136,9 @@ label {
   border: none;
   border-top: 1px solid #ffffff11;
   margin: 6px 0;
+}
+
+.btn-small{
+  margin-left: 30px;
+  border: 1px solid wheat;
 }
