--- a/src/App.css
+++ b/src/App.css
@@ -142,3 +142,19 @@ label {
   margin-left: 30px;
   border: 1px solid wheat;
 }
+
+.Filter{
+  display: flex;
+  gap:10px;
+}
+
+.filter-section{
+  margin: 20px;
+  padding: 20px;
+
+}
+
+.filter-section h3{
+  color: rgb(190, 190, 41);
+  text-decoration: underline;
+}
